feat: Implementacion de nueva ruta para obtencion de auditorias por el id del auditor udistrital/sisifo_documentacion/issues/467
